4.1.7
	Solaris build fix (Johann Klasek)
	Fix memory leak in SpamAssassin code (Manuel Badzong)
	Make implicit default rule at DATA stage silent (Greg Troxel)
4.1.6
	Fix parse bug for "domain no" clause
	Spamassassin support (Manuel Badzong)
	Support for DATA-stage greylisting (Manuel Badzong)
	Allow syslog facility to be configured (Joe Pruett)
	Allow logging to be disabled on a per-ACL basis (Joe Pruett)
	Honour $CPPFLAGS in Makefile (Greg Troxel)
	p0f support
	Experimental DKIM support (nobody tested it)
	libspf2 support in .spec file, for RPM generation (Joe Pruett)
	status support in Debian startup script (Bernhard Schneider)
4.1.5
	Fix huge memory leaks in native LDAP support
4.1.4
	Native LDAP support through OpenLDAP
4.1.3
	Fix build of SPF code
	Fix build of GeoIP code
4.1.2
	Fix auth and tls clauses in ACL so that they accept regex
	Update Debian startup script (Adam Katz)
	Fix bogus ACL when using features not compiled in
	Fix a crash when using SPF (Johann Klasek)
	Fix Typos
4.1.1
	Fix corruption in urlcheck parsing (Benoit Branciard)
	Document what package contains libmilter
	Fix error about stat in greylist.conf (Bob Smith)
	Add configurable dumpfile permissions
	Avoid C99 specific syntax (Greg Troxel)
	Documentation fixes
	Add SPF status selection to ACL
	Add id string to ACL
	Fix typos in documentation (Constantine A. Murenin)
4.0
	More 4.0 features examples to default greylist.conf
4.0rc2
	Fix %E and %R format substitution that sometime returned bogus results
	Report time taken by DNSRBL and urlcheck lookups (Benoit Branciard)
	Document milter timeouts, RPM generation
	Add 4.0 features examples to default greylist.conf
	Update contributor list
4.0rc1
	Accept --disable-dnsrbl without a bug
	Fix message size when multiple messages are sent in one session
	Do not build fd_pool.c if it is not used
4.0b4
	Add missing bits for Solaris 256 stream limitation workaround
	Fix build problem on Solaris
	Documentation fix (Tim Mooney)
4.0b3	